--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "chart",
+  "name": "skybonds",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-scripts": "2.1.8"
+    "react-redux": "^6.0.1",
+    "react-scripts": "2.1.8",
+    "recharts": "^1.5.0",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
