--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-redux": "^6.0.1",
     "react-scripts": "2.1.8",
     "recharts": "^1.5.0",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "reselect": "^4.0.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
