--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "2.1.8",
     "recharts": "^1.5.0",
     "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0"
   },
   "scripts": {
